--- a/web-app/src/components/card/card.css
+++ b/web-app/src/components/card/card.css
@@ -1,8 +1,19 @@
 .singleCard {
+  position: relative;
   border-radius: 10px;
   overflow: hidden;
   width: 330px;
   cursor: pointer;
+}
+
+.singleCard > i {
+  position: absolute;
+  top: 12px;
+  right: 10px;
+  padding: 5px 10px;
+  font-size: 22px;
+  color: white;
+  z-index: 1;
 }
 
 .locationStar {
