--- a/web-app/src/components/reservationBox/reservationBox.css
+++ b/web-app/src/components/reservationBox/reservationBox.css
@@ -104,23 +104,7 @@
   font-size: var(--fontMedium);
   color: var(--textDark);
 }
-
-/* Right Section */
-.reservationRight {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  background: #f9f9f9;
-  border: 1px solid #ddd;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-}
-
-/* Divider Styling */
 hr {
-  border: none;
-  margin: 15px 0px;
-  border-top: 1px solid var(--borderColor);
+  border-top: 1px solid #eee;
+  margin: 20px 0;
 }
