--- a/web-app/src/components/reservationBox/reservationBox.css
+++ b/web-app/src/components/reservationBox/reservationBox.css
@@ -171,3 +171,42 @@ hr {
   font-size: var(--fontSmall);
   color: var(--secondaryColor);
 }
+
+.amenitiesSection {
+  padding: 30px 0px;
+  font-family: Arial, sans-serif;
+}
+
+.amenitiesSection > p {
+  color: var(--textDark);
+  font-size: 22px;
+  font-weight: var(--fontLWeight);
+  padding-bottom: 20px;
+}
+
+.amenitiesGrid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+
+.amenityItem {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  font-size: var(--fontMedium);
+  color: var(--textDark);
+}
+
+.amenityItem > i {
+  font-size: 22px;
+  color: var(--secondaryColor);
+  font-weight: var(--fontSWeight);
+  margin-top: 5px;
+}
+
+.amenityItem > .label {
+  font-size: var(--fontMedium);
+  font-weight: var(--fontMWeight);
+  color: var(--textDark);
+}
